# ipi-b2-mixte-mariokart

./: characters.sql  mariokart.db  pyproject.toml  races.sql  vehicules.sql
src/ipi_b2_mixte_mariokart/: entities.py  main.py  messaging.py  repositories.py  servers.py
